--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3 id="temp"></h3>
                 <h3 id="humidity"></h3>
                 <h3 id="windspeed"></h3>
-                <h3 id="uvindex"></h3>
+                <h3 id="uvIndexParent"><span id="uvindex"></span></h3>
             </div>
             <div id="container__5-day-forecast">
                 <h2>5-Day Forecast</h2>
