--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
             </div>
             <div id="container__5-day-forecast">
                 <h2>5-Day Forecast:</h2>
-                <div id="forecast__wrapper">
-                    <!-- <div class="forecast__box">
-                        <p class="forecast__date">date</p>
-                        <p class="forecast__icon">icon</p>
-                        <p class="forecast__temp">temp</p>
-                        <p class="forecast__humidity">humidity</p>
-                    </div> -->
+                <div class="forecast__wrapper">
+
                 </div>
+                <ul class="forecastList">
+
+                </ul>
             </div>
         </div>
     </div>
