leading up to local storage working

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </div>
             </div>
             <div>
-                <ul class="cityList">
+                <button id="clear_btn">Clear Cities</button>
+                <ul id="citiesList" class="cityList">
 
                 </ul>
             </div>
@@ -43,9 +44,6 @@
                 <div class="forecast__wrapper">
 
                 </div>
-                <ul class="forecastList">
-
-                </ul>
             </div>
         </div>
     </div>
